# health-widget

./: .gitignore  99-tartarus.rules  CLAUDE.md  Cargo.toml  README.md  build.rs  install-kde-privacy.sh  install-transcribe.sh  setup.sh
docs/: PLAN.md  tartarus-keymap.md
docs/superpowers/plans/: 2026-07-08-whisper-transcription.md  2026-07-08-widget-chat-column.md  2026-07-09-embedded-terminal-column.md  2026-07-09-panda-vcam.md  2026-07-14-webmic-feed.md  2026-07-14-webmic-https.md  2026-07-19-streaming-stt.md  2026-07-22-apply-chain-profiles.md  2026-07-22-autopilot-cycle.md
docs/superpowers/specs/: 2026-07-08-whisper-transcription-design.md  2026-07-08-widget-chat-column-design.md  2026-07-09-embedded-terminal-column-design.md  2026-07-09-panda-vcam-design.md  (+7 more)
examples/: metrics.json
kwin-script/health-widget-exclude/: metadata.json
scripts/: it_corrections.tsv  it_hotwords.txt  night-probe.sh  test_whisper_stream.py  vosk_stream.py  whisper_smoke.py  whisper_stream.py
spikes/hotkey-kglobalaccel/: Cargo.toml
spikes/hotkey-kglobalaccel/src/: main.rs
spikes/uinput-type/: Cargo.toml
src/: audio.rs  avatar.rs  chat.rs  clip.rs  config.rs  data.rs  deepseek.rs  detect.rs  hr_reply.rs  instance.rs  kwin_shot.rs  main.rs  pilot.rs  pilot_notify.rs  pilot_scan.rs  pilot_stats.rs  prompts.rs  recorder.rs  screencast.rs  screenshot.rs  state.rs  tartarus.rs  telemetry.rs  terminal.rs  transcribe.rs  transcript_log.rs  webmic.rs  winctl.rs
web/: index.html  package-lock.json  package.json
web/public/: worklet.js
web/src/: App.jsx
(+2 files in other folders)
