[package]
name = "health-widget"
version = "0.4.2"
edition = "2021"
description = "Приватный always-on-top виджет показателей здоровья, скрываемый от шаринга экрана (GNOME/Wayland)"

[dependencies]
eframe = { version = "0.31", default-features = true }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
libc = "0.2"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
zbus = "4"
egui_term = { path = "vendor/egui_term" }
evdev = "0.13.2"
resvg = "0.47.0"
tiny_http = { path = "vendor/tiny_http", features = ["ssl-openssl"] }

[profile.release]
opt-level = 2
strip = true
